@@ -1,4 +1,8 @@
 2006-03-08  Benhur Stein <benhur@inf.ufsm.br>
+	* General/HierarchyBrowser.m, General/PajeType.m: remove some more
+	  GCC4 warnings
+
+2006-03-08  Benhur Stein <benhur@inf.ufsm.br>
 	* ContainerFilter/ContainerSelector.h,
 	  EntityTypeFilter/EntityTypeSelector.h, NSDate+Additions.m,
 	  General/PajeContainer.m, General/PajeEvent.m, General/PajeFilter.h,
